wrote some html codes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <div>
+            <img src="" alt="New image">
+        </div>
+    </section> 
 </body>
 </html>
