wrote some more html codes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div>
             <img src="" alt="New image">
         </div>
+        <div>
+            <h3>Austine</h3>
+            <p>this is totally about austine Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ipsa iusto nisi iure corporis esse perferendis quae quos. Quasi, mollitia dolorum animi ratione non unde vero veniam error dicta suscipit?</p>
+        </div>
     </section> 
 </body>
 </html>
